libs/@local/hashql/ast/tests/ui/lower/sanitizer/constraint.jsonc
//@ run: fail
//@ description: Generic constraints with bounds should be sanitized and error out
[
  "`+`<T: Number>",
  //~^ ERROR `+` does not accept generic arguments
  { "#literal": 1 },
  { "#literal": 2 }
]
